Add rudimentary pattern matching to Java